tests/paczka1/fuzzy1/18485244.err
Error in line 2: sm7fdbXsY8 A718 14,4
Error in line 14: U1ild A718 54,69
Error in line 25: U1ild A718 32,8
